<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.QrScanActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/previewView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:scaleType="fillCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/viewfinder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_qr_viewfinder"
        app:layout_constraintBottom_toTopOf="@id/hintText"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="260dp"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_max="260dp"
        app:layout_constraintWidth_percent="0.7" />

    <View
        android:id="@+id/scrimTop"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/qr_scan_scrim"
        app:layout_constraintBottom_toTopOf="@id/viewfinder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/scrimBottom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/qr_scan_scrim"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewfinder" />

    <View
        android:id="@+id/scrimStart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/qr_scan_scrim"
        app:layout_constraintBottom_toBottomOf="@id/viewfinder"
        app:layout_constraintEnd_toStartOf="@id/viewfinder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/viewfinder" />

    <View
        android:id="@+id/scrimEnd"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/qr_scan_scrim"
        app:layout_constraintBottom_toBottomOf="@id/viewfinder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/viewfinder"
        app:layout_constraintTop_toTopOf="@id/viewfinder" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationContentDescription="@string/qr_scan_close"
        app:navigationIcon="@drawable/ic_close"
        app:navigationIconTint="@android:color/white"
        app:title="@string/qr_scan_title"
        app:titleTextColor="@android:color/white" />

    <TextView
        android:id="@+id/hintText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:accessibilityLiveRegion="polite"
        android:background="@drawable/bg_qr_scan_hint"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:text="@string/qr_scan_hint"
        android:textAppearance="?attr/textAppearanceBodyMedium"
        android:textColor="@android:color/white"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewfinder"
        app:layout_constraintWidth_max="560dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
